camera ready commit
- fixed citations, links, chart style, fixed/typos rewording tweaks

--- a/assets/bibliography/2024-05-07-primacy-bias-and-why-it-helps-to-forget.bib
+++ b/assets/bibliography/2024-05-07-primacy-bias-and-why-it-helps-to-forget.bib
@@ -5,3 +5,114 @@
   year={2015},
   url={https://arxiv.org/pdf/1502.04623.pdf}
 }
+
+@misc{https://doi.org/10.48550/arxiv.2205.07802,
+  doi = {10.48550/ARXIV.2205.07802},
+  url = {https://arxiv.org/abs/2205.07802},
+  author = {Nikishin,  Evgenii and Schwarzer,  Max and D'Oro,  Pierluca and Bacon,  Pierre-Luc and Courville,  Aaron},
+  keywords = {Machine Learning (cs.LG),  Artificial Intelligence (cs.AI),  Machine Learning (stat.ML),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
+  title = {The Primacy Bias in Deep Reinforcement Learning},
+  publisher = {arXiv},
+  year = {2022},
+  copyright = {arXiv.org perpetual,  non-exclusive license}
+}
+
+@inproceedings{Robins,
+  title = {Catastrophic forgetting in neural networks: the role of rehearsal mechanisms},
+  url = {http://dx.doi.org/10.1109/ANNES.1993.323080},
+  DOI = {10.1109/annes.1993.323080},
+  booktitle = {Proceedings 1993 The First New Zealand International Two-Stream Conference on Artificial Neural Networks and Expert Systems},
+  publisher = {IEEE Comput. Soc. Press},
+  author = {Robins,  A.}
+}
+
+@inproceedings{
+d'oro2022sampleefficient,
+title={Sample-Efficient Reinforcement Learning by Breaking the Replay Ratio Barrier},
+author={Pierluca D'Oro and Max Schwarzer and Evgenii Nikishin and Pierre-Luc Bacon and Marc G Bellemare and Aaron Courville},
+booktitle={Deep Reinforcement Learning Workshop NeurIPS 2022},
+year={2022},
+url={https://openreview.net/forum?id=4GBGwVIEYJ}
+}
+
+@article{Marshall1972,
+  title = {The effects of the elimination of rehearsal on primacy and recency},
+  volume = {11},
+  ISSN = {0022-5371},
+  url = {http://dx.doi.org/10.1016/S0022-5371(72)80049-5},
+  DOI = {10.1016/s0022-5371(72)80049-5},
+  number = {5},
+  journal = {Journal of Verbal Learning and Verbal Behavior},
+  publisher = {Elsevier BV},
+  author = {Marshall,  Philip H. and Werder,  Pamela R.},
+  year = {1972},
+  month = oct,
+  pages = {649–653}
+}
+
+@misc{https://doi.org/10.48550/arxiv.1812.02900,
+  doi = {10.48550/ARXIV.1812.02900},
+  url = {https://arxiv.org/abs/1812.02900},
+  author = {Fujimoto,  Scott and Meger,  David and Precup,  Doina},
+  keywords = {Machine Learning (cs.LG),  Artificial Intelligence (cs.AI),  Machine Learning (stat.ML),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
+  title = {Off-Policy Deep Reinforcement Learning without Exploration},
+  publisher = {arXiv},
+  year = {2018},
+  copyright = {arXiv.org perpetual,  non-exclusive license}
+}
+
+@misc{towers_gymnasium_2023,
+        title = {Gymnasium},
+        url = {https://zenodo.org/record/8127025},
+        abstract = {An API standard for single-agent reinforcement learning environments, with popular reference environments and related utilities (formerly Gym)},
+        urldate = {2023-07-08},
+        publisher = {Zenodo},
+        author = {Towers, Mark and Terry, Jordan K. and Kwiatkowski, Ariel and Balis, John U. and Cola, Gianluca de and Deleu, Tristan and Goulão, Manuel and Kallinteris, Andreas and KG, Arjun and Krimmel, Markus and Perez-Vicente, Rodrigo and Pierré, Andrea and Schulhoff, Sander and Tai, Jun Jet and Shen, Andrew Tan Jin and Younis, Omar G.},
+        month = mar,
+        year = {2023},
+        doi = {10.5281/zenodo.8127026},
+}
+
+@misc{https://doi.org/10.48550/arxiv.1312.5602,
+  doi = {10.48550/ARXIV.1312.5602},
+  url = {https://arxiv.org/abs/1312.5602},
+  author = {Mnih,  Volodymyr and Kavukcuoglu,  Koray and Silver,  David and Graves,  Alex and Antonoglou,  Ioannis and Wierstra,  Daan and Riedmiller,  Martin},
+  keywords = {Machine Learning (cs.LG),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
+  title = {Playing Atari with Deep Reinforcement Learning},
+  publisher = {arXiv},
+  year = {2013},
+  copyright = {arXiv.org perpetual,  non-exclusive license}
+}
+
+@misc{https://doi.org/10.48550/arxiv.2111.08819,
+  doi = {10.48550/ARXIV.2111.08819},
+  url = {https://arxiv.org/abs/2111.08819},
+  author = {Huang,  Shengyi and Dossa,  Rousslan Fernand Julien and Ye,  Chang and Braga,  Jeff},
+  keywords = {Machine Learning (cs.LG),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
+  title = {CleanRL: High-quality Single-file Implementations of Deep Reinforcement Learning Algorithms},
+  publisher = {arXiv},
+  year = {2021},
+  copyright = {Creative Commons Attribution 4.0 International}
+}
+
+@misc{https://doi.org/10.48550/arxiv.1910.02208,
+  doi = {10.48550/ARXIV.1910.02208},
+  url = {https://arxiv.org/abs/1910.02208},
+  author = {Wang,  Che and Wu,  Yanqiu and Vuong,  Quan and Ross,  Keith},
+  keywords = {Machine Learning (cs.LG),  Artificial Intelligence (cs.AI),  Machine Learning (stat.ML),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
+  title = {Striving for Simplicity and Performance in Off-Policy DRL: Output Normalization and Non-Uniform Sampling},
+  publisher = {arXiv},
+  year = {2019},
+  copyright = {arXiv.org perpetual,  non-exclusive license}
+}
+
+@misc{https://doi.org/10.48550/arxiv.1511.05952,
+  doi = {10.48550/ARXIV.1511.05952},
+  url = {https://arxiv.org/abs/1511.05952},
+  author = {Schaul,  Tom and Quan,  John and Antonoglou,  Ioannis and Silver,  David},
+  keywords = {Machine Learning (cs.LG),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
+  title = {Prioritized Experience Replay},
+  publisher = {arXiv},
+  year = {2015},
+  copyright = {arXiv.org perpetual,  non-exclusive license}
+}
