add ref link info

--- a/assets/bibliography/2024-05-07-unraveling-the-impact-of-training-samples.bib
+++ b/assets/bibliography/2024-05-07-unraveling-the-impact-of-training-samples.bib
@@ -1,11 +1,13 @@
 @misc{koh2020understanding,
       title={Understanding Black-box Predictions via Influence Functions}, 
+      URL = {https://arxiv.org/abs/1703.04730},
       author={Pang Wei Koh and Percy Liang},
       year={2020},
       eprint={1703.04730},
       archivePrefix={arXiv},
       primaryClass={stat.ML}
 }
+
 @article{bd831960-ac2b-396a-8c8f-de3944255f11,
  ISSN = {01621459},
  URL = {http://www.jstor.org/stable/2285666},
@@ -23,6 +25,7 @@
 
 @misc{ilyas2022datamodels,
       title={Datamodels: Predicting Predictions from Training Data}, 
+      URL = {https://arxiv.org/abs/2202.00622},
       author={Andrew Ilyas and Sung Min Park and Logan Engstrom and Guillaume Leclerc and Aleksander Madry},
       year={2022},
       eprint={2202.00622},
@@ -32,6 +35,7 @@
 
 @misc{park2023trak,
       title={TRAK: Attributing Model Behavior at Scale}, 
+      URL = {https://arxiv.org/abs/2303.14186},
       author={Sung Min Park and Kristian Georgiev and Andrew Ilyas and Guillaume Leclerc and Aleksander Madry},
       year={2023},
       eprint={2303.14186},
@@ -56,6 +60,7 @@
 
 @article{johnsonLindenstrauss,
     author = {Johnson, William and Lindenstrauss, J.},
+    URL = {https://stanford.edu/class/cs114/readings/JL-Johnson.pdf},
     year = {1982},
     month = {01},
     pages = {189-206},
@@ -66,6 +71,7 @@
 
 @misc{shah2022modeldiff,
     title={ModelDiff: A Framework for Comparing Learning Algorithms}, 
+    URL = {https://arxiv.org/abs/2211.12491},
     author={Harshay Shah and Sung Min Park and Andrew Ilyas and Aleksander Madry},
     year={2022},
     eprint={2211.12491},
