--- a/assets/bibliography/2024-05-07-deqalg-reasoning.bib
+++ b/assets/bibliography/2024-05-07-deqalg-reasoning.bib
@@ -74,3 +74,12 @@
       author={Dana S. Scott},
       howpublished={Technical Monograph PRG-2},
 }
+
+@misc{zhou2024transformers,
+      title={Transformers Can Achieve Length Generalization But Not Robustly}, 
+      author={Yongchao Zhou and Uri Alon and Xinyun Chen and Xuezhi Wang and Rishabh Agarwal and Denny Zhou},
+      year={2024},
+      eprint={2402.09371},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
