--- a/assets/bibliography/2024-05-07-dpi-fsvi.bib
+++ b/assets/bibliography/2024-05-07-dpi-fsvi.bib
@@ -1,5 +1,5 @@
 @article{sun2019functional,
-  title     = "Functional variational Bayesian neural networks",
+  title     = "Functional Variational Bayesian Neural Networks",
   author    = "Shengyang Sun and Guodong Zhang and Jiaxin Shi and Roger Grosse",
   booktitle = "International Conference on Learning Representations",
   year      = "2019",
@@ -7,7 +7,7 @@
 }
 
 @inproceedings{klarner2023drug,
-  title        = "Drug discovery under covariate shift with domain-informed prior distributions over functions",
+  title        = "Drug Discovery under Covariate Shift with Domain-Informed Prior Distributions over Functions",
   author       = "Klarner, Leo and Rudner, Tim GJ and Reutlinger, Michael and Schindler, Torsten and Morris, Garrett M and Deane, Charlotte and Teh, Yee Whye",
   booktitle    = "International Conference on Machine Learning",
   pages        = "17176--17197",
@@ -28,7 +28,7 @@
 
 
 @inproceedings{osband2022evaluating,
-  title     = "Evaluating high-order predictive distributions in deep learning",
+  title     = "Evaluating High-Order Predictive Distributions in Deep Learning",
   author    = "Osband, Ian and Wen, Zheng and Asghari, Seyed Mohammad and Dwaracherla, Vikranth and Lu, Xiuyuan and Van Roy, Benjamin",
   booktitle = "Proceedings of the Thirty-Eighth Conference on Uncertainty in Artificial Intelligence",
   pages     = "1552--1560",
@@ -40,11 +40,10 @@
   publisher = "PMLR",
   pdf       = "https://proceedings.mlr.press/v180/osband22a/osband22a.pdf",
   url       = "https://proceedings.mlr.press/v180/osband22a.html",
-  abstract  = "Most work on supervised learning research has focused on marginal predictions. In decision problems, joint predictive distributions are essential for good performance. Previous work has developed methods for assessing low-order predictive distributions with inputs sampled i.i.d. from the testing distribution. With low-dimensional inputs, these methods distinguish agents that effectively estimate uncertainty from those that do not. We establish that the predictive distribution order required for such differentiation increases greatly with input dimension, rendering these methods impractical. To accommodate high-dimensional inputs, we introduce dyadic sampling, which focuses on predictive distributions associated with random pairs of inputs. We demonstrate that this approach efficiently distinguishes agents in high-dimensional examples involving simple logistic regression as well as complex synthetic and empirical data."
 }
 
 @inproceedings{wang2021beyond,
-  title     = " Beyond Marginal Uncertainty: How Accurately can Bayesian Regression Models Estimate Posterior Predictive Correlations? ",
+  title     = "Beyond Marginal Uncertainty: How Accurately can Bayesian Regression Models Estimate Posterior Predictive Correlations?",
   author    = "Wang, Chaoqi and Sun, Shengyang and Grosse, Roger",
   booktitle = "Proceedings of The 24th International Conference on Artificial Intelligence and Statistics",
   pages     = "2476--2484",
@@ -56,7 +55,6 @@
   publisher = "PMLR",
   pdf       = "http://proceedings.mlr.press/v130/wang21g/wang21g.pdf",
   url       = "https://proceedings.mlr.press/v130/wang21g.html",
-  abstract  = " While uncertainty estimation is a well-studied topic in deep learning, most such work focuses on marginal uncertainty estimates, i.e. the predictive mean and variance at individual input locations. But it is often more useful to estimate predictive correlations between the function values at different input locations. In this paper, we consider the problem of benchmarking how accurately Bayesian models can estimate predictive correlations. We first consider a downstream task which depends on posterior predictive correlations: transductive active learning (TAL). We find that TAL makes better use of models’ uncertainty estimates than ordinary active learning, and recommend this as a benchmark for evaluating Bayesian models. Since TAL is too expensive and indirect to guide development of algorithms, we introduce two metrics which more directly evaluate the predictive correlations and which can be computed efficiently: meta-correlations (i.e. the correlations between the models correlation estimates and the true values), and cross-normalized likelihoods (XLL). We validate these metrics by demonstrating their consistency with TAL performance and obtain insights about the relative performance of current Bayesian neural net and Gaussian process models. "
 }
 
 @inproceedings{rudner2022tractable,
@@ -65,7 +63,8 @@
   booktitle = "Advances in Neural Information Processing Systems",
   editor    = "Alice H. Oh and Alekh Agarwal and Danielle Belgrave and Kyunghyun Cho",
   year      = "2022",
-  url       = "https://openreview.net/forum?id=OQs0pLKGGpS"
+  pdf       = "https://arxiv.org/pdf/2312.17199.pdf",
+  url       = "https://arxiv.org/abs/2312.17199"
 }
 
 
@@ -80,9 +79,8 @@
   series    = "Proceedings of Machine Learning Research",
   month     = "17--23 Jul",
   publisher = "PMLR",
-  pdf       = "https://proceedings.mlr.press/v162/rudner22a/rudner22a.pdf",
-  url       = "https://proceedings.mlr.press/v162/rudner22a.html",
-  abstract  = "Sequential Bayesian inference over predictive functions is a natural framework for continual learning from streams of data. However, applying it to neural networks has proved challenging in practice. Addressing the drawbacks of existing techniques, we propose an optimization objective derived by formulating continual learning as sequential function-space variational inference. In contrast to existing methods that regularize neural network parameters directly, this objective allows parameters to vary widely during training, enabling better adaptation to new tasks. Compared to objectives that directly regularize neural network predictions, the proposed objective allows for more flexible variational distributions and more effective regularization. We demonstrate that, across a range of task sequences, neural networks trained via sequential function-space variational inference achieve better predictive accuracy than networks trained with related methods while depending less on maintaining a set of representative points from previous tasks."
+  pdf       = "https://arxiv.org/pdf/2312.17210.pdf",
+  url       = "https://arxiv.org/abs/2312.17210",
 }
 
 @inproceedings{burt2021understanding,
@@ -94,22 +92,24 @@
 }
 
 @article{hinton2015distilling,
-  title   = "Distilling the knowledge in a neural network",
+  title   = "Distilling the Knowledge in a Neural Network",
   author  = "Hinton, Geoffrey and Vinyals, Oriol and Dean, Jeff",
   journal = "arXiv preprint arXiv:1503.02531",
-  year    = "2015"
+  year    = "2015",
+  pdf     = "https://arxiv.org/pdf/1503.02531.pdf",
+  url     = "https://arxiv.org/abs/1503.02531"
 }
 
 @inproceedings{hinton1993keeping,
-  title     = "Keeping the neural networks simple by minimizing the description length of the weights",
+  title     = "Keeping the Neural Network Simple by Minimizing the Description Length of the Weights",
   author    = "Hinton, Geoffrey E and Van Camp, Drew",
-  booktitle = "Proceedings of the sixth annual conference on Computational learning theory",
+  booktitle = "Proceedings of the Sixth Annual Conference on Computational Learning Theory",
   pages     = "5--13",
   year      = "1993"
 }
 
 @article{fortuin2022priors,
-  title     = "Priors in bayesian deep learning: A review",
+  title     = "Priors in Bayesian Deep Learning: A Review",
   author    = "Fortuin, Vincent",
   journal   = "International Statistical Review",
   volume    = "90",
@@ -131,14 +131,18 @@
   title   = "Marginal and Joint Cross-Entropies & Predictives for Online Bayesian Inference, Active Learning, and Active Sampling",
   author  = "Kirsch, Andreas and Kossen, Jannik and Gal, Yarin",
   journal = "arXiv preprint arXiv:2205.08766",
-  year    = "2022"
+  year    = "2022",
+  pdf     = "https://arxiv.org/pdf/2205.08766.pdf",
+  url     = "https://arxiv.org/abs/2205.08766"
 }
 
 @misc{fort2020deep,
-      title={Deep Ensembles: A Loss Landscape Perspective}, 
-      author={Stanislav Fort and Huiyi Hu and Balaji Lakshminarayanan},
-      year={2020},
-      eprint={1912.02757},
-      archivePrefix={arXiv},
-      primaryClass={stat.ML}
+  title={Deep Ensembles: A Loss Landscape Perspective}, 
+  author={Stanislav Fort and Huiyi Hu and Balaji Lakshminarayanan},
+  year={2020},
+  eprint={1912.02757},
+  archivePrefix={arXiv},
+  primaryClass={stat.ML},
+  url={https://arxiv.org/abs/1912.02757},
+  pdf={https://arxiv.org/pdf/1912.02757.pdf}
 }
