Add a section on the actual FSVI objective

--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -11,21 +11,7 @@ authors:
   - name: Andreas Kirsch
     url: "https://www.blackhc.net"
     affiliations:
-      name: University of Oxford (Former Affiliation)
-
-# authors:
-#   - name: Albert Einstein
-#     url: "https://en.wikipedia.org/wiki/Albert_Einstein"
-#     affiliations:
-#       name: IAS, Princeton
-#   - name: Boris Podolsky
-#     url: "https://en.wikipedia.org/wiki/Boris_Podolsky"
-#     affiliations:
-#       name: IAS, Princeton
-#   - name: Nathan Rosen
-#     url: "https://en.wikipedia.org/wiki/Nathan_Rosen"
-#     affiliations:
-#       name: IAS, Princeton
+      name: University of Oxford<sup>&ndash;2023</sup>
 
 # must be the exact same name as your blogpost
 bibliography: 2024-05-07-dpi-fsvi.bib  
@@ -910,7 +896,7 @@ When we directly optimize the KL divergence on a finite input dataset, for examp
 
 This is of particular interest in continual learning, where the prior for the next task is chosen to be the posterior from the previous task. In this case, the functional ELBO can be used to approximate the posterior of the previous model while incorporating new data.
 
-For two great papers that are very readable and provide further insights, see "*Continual learning via sequential function-space variational inference*"<d-cite key="rudner2022continual"></d-cite> and "*Tractable function-space variational inference in Bayesian neural networks*"<d-cite key="rudner2022tractable"></d-cite>, both by Rudner et al. (2022).
+For two great papers that are very readable and provide further insights, see "*Continual Learning via Sequential Function-Space Variational Inference*"<d-cite key="rudner2022continual"></d-cite> and "*Tractable Function-Space Variational Inference in Bayesian Neural Networks*"<d-cite key="rudner2022tractable"></d-cite>, both by Rudner et al. (2022).
 
 ## Comparison to FSVI in the Literature
 
@@ -929,7 +915,7 @@ $$
 This follows that from applying the DPI twice, as the logits are functions of the weights and the weights are functions of the logits.
 </aside>
 
-In practice, both works by Rudner et al. (2022), linearize the logits<d-footnote>The logits are the final activations of the neural network before applying the softmax function (in multi-class classification). They are not to be confused with the pre-logits, e.g. embeddings before the final linear layer.</d-footnote> (similar to a Laplace approximation) and use the DPI to show (in their notation):
+In practice, Rudner et al. (2022) and its continual learning follow-up linearize the logits<d-footnote>The logits are the final activations of the neural network before applying the softmax function (in multi-class classification). They are not to be confused with the pre-logits, e.g. embeddings before the final linear layer.</d-footnote> (similar to a Laplace approximation) and use the DPI to show (in their notation):
 
 $$
 \mathbb{D}_{\mathrm{KL}}\left(q_{f(\cdot ; \boldsymbol{\Theta})} \| p_{f(\cdot ; \boldsymbol{\Theta})}\right) \leq \mathbb{D}_{\mathrm{KL}}\left(q_{\Theta} \| p_{\Theta}\right)
@@ -1090,9 +1076,15 @@ Given this consistency, we don't have to differentiate between $$\hat\opp$$ and 
 The same holds for $$\opq$$.
 
 <aside class="l-body box-important" markdown="1">
-This is not a special property of the equivalence class mapping but a general property of applying functions to random variables: $$[\cdot]$$ maps the random variable $$\W$$ to the transformed random variable $$[\W]$$, and this mapping commutes with Bayesian inference.
+This commutative property is not unique to the equivalence class mapping but rather a general characteristic of applying functions to random variables. The mapping $$[\cdot]$$ transforms the random variable $$\W$$ into a new random variable $$[\W]$$, and remarkably, this transformation commutes with Bayesian inference.
 
-Above proof is valid for any function $$\fof{\cdot}$$ applied to a random variable: we can either draw a parameter sample from the posterior and apply the function to it or perform Bayesian inference on the transformed random variable.
+The proof above holds for any function $$\fof{\cdot}$$ applied to a random variable. We have the freedom to either draw a parameter sample from the posterior and then apply the function to it, or alternatively, perform Bayesian inference directly on the transformed random variable.
+
+Consequently, we have:
+
+$$[\W \given \Dany] = [\W] \given \Dany.$$
+
+These simple results deserve careful appreciation to fully internalize them.
 </aside>
 
 ### Equality & Symmetries
@@ -1106,7 +1098,9 @@ $$
 And again: what does the gap between the two terms tell us? 
 
 <aside class="l-body box-error" markdown="1">
-Intuitively speaking, $$\Kale{\qof{[\W]}}{\pof{[\W]}}$$ captures the meaningful divergence between approximate and true distribution, while $$\Kale{\qof{\W}}{\pof{\W}}$$ includes any divergence due to parameter symmetries that has no effect on the predictions, now or later. The gap between the two terms tells us how much redundancy is captured by the parameter-based KL divergence.
+Intuitively speaking, $$\Kale{\qof{[\W]}}{\pof{[\W]}}$$ captures the meaningful divergence between approximate and true distribution of the predictions, while $$\Kale{\qof{\W}}{\pof{\W}}$$ also includes divergence due to parameter symmetries that have no effect on the predictions, now or later. 
+
+The gap between the two terms tells us how much redundancy is captured by the parameter-based KL divergence.
 </aside>
 
 Let's look at a few examples to get a better understanding of this.
@@ -1131,10 +1125,11 @@ Let's look at a few examples to get a better understanding of this.
 
   $$
   \begin{aligned}
-  \Kale{\qof{\W}}{\pof{\W}} &= \Kale{\qof{\W \given \W \in [K\,2\pi, (K+1)\,2\pi]}}{\pof{\W \given \W \in [K\,2\pi, (K+1)\,2\pi]}} \\
+  &\Kale{\qof{\W}}{\pof{\W}} \\
+  &\quad= \Kale{\qof{\W \given \W \in [K\,2\pi, (K+1)\,2\pi]}}{\pof{\W \given \W \in [K\,2\pi, (K+1)\,2\pi]}} \\
   &\quad + \Kale{\qof{\W \in [K\,2\pi, (K+1)\,2\pi]}}{\pof{\W \in [K\,2\pi, (K+1)\,2\pi]}} \\
-  &= \Kale{\qof{[\W]}}{\pof{[\W]}} \\
-  &\quad + \Kale{\qof{\W \in [K\,2\pi, (K+1)\,2\pi]}}{\pof{\W \in [K\,2\pi, (K+1)\,2\pi]}}. 
+  &\quad= \Kale{\qof{[\W]}}{\pof{[\W]}} \\
+  &\quad\quad + \Kale{\qof{\W \in [K\,2\pi, (K+1)\,2\pi]}}{\pof{\W \in [K\,2\pi, (K+1)\,2\pi]}}. 
   \end{aligned}
   $$
 
@@ -1165,7 +1160,7 @@ This tells us that the predictive prior term can at best measure the KL divergen
 For the equality cases, we observe that:
 
 1. we need a 1:1 mapping between parameters and equivalence classes for the first bound to be tight, and
-2. we need $$\Kale{\qof{[\W] \given \Y_n,\x_n,...,\Y_1,\x_1}}{\pof{[\W] \given \Y_n,\x_n,...,\Y_1,\x_1}} \to 0$$ for $$n \to \infty$$ for the second bound to be tight.
+2. we need $$\Kale{\qof{[\W] \given \Y_n,\x_n,...,\Y_1,\x_1}}{\pof{[\W] \given \Y_n,\x_n,...,\Y_1,\x_1}} \to 0$$ for $$n \to \infty$$ for the second bound to be tight, following the deductions in the first part of this post.
 
 For **2.**: as we know from the chain rule that
 
@@ -1193,14 +1188,18 @@ $$
 \end{aligned}
 $$
 
-In other words, for a given $$[w']$$, in the space of equivalence classes as defined previously, the equivalence class of all MLE solutions in the data limit, $$[MLE]$$, will be unique by definition---the model is identifiable---and match $$[\w']$$<d-footnote>This follows from the consistency of MLE estimators but also from Berstein von Mises with a flat/uninformative prior.</d-footnote>. As the MLE is prior-independent once there is support for it, both $$\opq$$ and $$\opp$$ will converge to the MLE $$[\w']$$ with sufficient data. Taking the expectation, this yields $$\Kale{\qof{[\W]\given \Y,..., \x...}}{\pof{[\W] \given \Y,..., \x...}} \to 0$$ for $$n \to \infty$$, and thus, we have:
+In other words:
 
-$$
-\begin{aligned}
-& \Kale{\qof{[\W]}}{\pof{[\W]}} = \\
-&\quad = \sup_{n\in \mathbb{N}} \Kale{\qof{\Y_n,...,\Y_1\given\x_n,...,\x_1}}{\pof{\Y_n,...,\Y_1\given\x_n,...,\x_1}}.
-\end{aligned}
-$$
+1. For a given $$[w']$$, in the space of equivalence classes as defined previously, the equivalence class of all MLE solutions in the data limit, $$[MLE]$$, will be unique by definition---the model is identifiable---and match $$[\w']$$<d-footnote>This follows from the consistency of MLE estimators but also from Berstein von Mises with a flat/uninformative prior.</d-footnote>. 
+
+2. As the MLE is prior-independent once there is support for it, both $$\opq$$ and $$\opp$$ will converge to the MLE $$[\w']$$ with sufficient data. Taking the expectation, this yields $$\Kale{\qof{[\W]\given \Y,..., \x...}}{\pof{[\W] \given \Y,..., \x...}} \to 0$$ for $$n \to \infty$$, and thus, we have:
+
+  $$
+  \begin{aligned}
+  & \Kale{\qof{[\W]}}{\pof{[\W]}} = \\
+  &\quad = \sup_{n\in \mathbb{N}} \Kale{\qof{\Y_n,...,\Y_1\given\x_n,...,\x_1}}{\pof{\Y_n,...,\Y_1\given\x_n,...,\x_1}}.
+  \end{aligned}
+  $$
 
 (Again, this is not a formal proof but an intuition for why the gap might close in the data limit.)
 
@@ -1208,9 +1207,44 @@ In my opinion, this is a great result. We have shown both that the predictive pr
 
 Let's appreciate one more thing: the predictive prior can consist of infinitely many data points and still converge to a finite value. 
 
-## Parameter Priors vs. Predictive Priors
+### The True FSVI Objective
 
-What is the advantage of this all?
+The true objective of FSVI is to perform variational inference in the space of equivalence classes, approximating the posterior $$\pof{[\w] \given \Dany}$$ that captures the meaningful aspects of the model while being invariant to parameter symmetries. This perspective reveals FSVI as a powerful and principled framework for Bayesian inference in overparameterized models, providing both conceptual and practical advantages over standard variational inference in parameter space.
+
+<aside class="l-body box-important" markdown="1">
+FSVI aims to approximate the posterior distribution over *equivalence classes* of parameters $$\pof{[\w] \given \Dany}$$ rather than the posterior over raw parameters $$\pof{\w \given \Dany}$$.
+</aside>
+
+This is because $$\pof{[\w] \given \Dany}$$ captures the meaningful aspects of the posterior, as it is invariant to the symmetries and equivalences in the parameter space that leave the likelihood unchanged.
+
+To achieve this, FSVI employs an implicit variational distribution $$\qof{[\w]}$$ and minimizes the following objective, which is regular variational inference on the equivalence classes $$\Kale{\qof{[\W]}}{\pof{[\W] \given \Dany}}$$, decomposed using the insights discussed:
+
+$$
+\begin{aligned}
+&\Kale{\qof{[\W]}}{\pof{[\W] \given \Dany}} + \Hof{\Dany} \\
+&\quad = 
+\E{\qof{[\w]}}{-\log \pof{\Dany \given [\w]}} + \Kale{\qof{[\W]}}{\pof{[\W] \given \Dany}} \\
+&\quad = \E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \Kale{\qof{[\W]}}{\pof{[\W] \given \Dany}} -  \Hof{\Dany} \\
+&\quad = \sup_n \E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \Kale{\qof{\Y_n... \given \x_n...}}{\pof{\Y_n... \given \x_n...}} \\
+&\quad \ge \E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \Kale{\qof{\Y_n... \given \x_n...}}{\pof{\Y_n... \given \x_n...}} \quad \forall n \\
+&\quad \ge \Hof{\Dany}.
+\end{aligned}
+$$
+
+This objective differs from the standard variational inference objective in a subtle but crucial way: it operates in the space of equivalence classes $$[\w]$$ rather than the raw parameter space $$\w$$. The likelihood term $$\pof{\Dany \given [\w]}$$ is well-defined because all parameters $$\w$$ within an equivalence class $$[\w]$$ induce the same likelihood by construction, allowing us to replace it with the likelihood term $$\pof{\Dany \given \w}$$.
+
+The key insight is that FSVI leverages the data processing inequality (DPI) to avoid explicitly constructing the equivalence classes for the prior distribution or specifying a model that operates on them directly. 
+By matching the predictive distributions via the predictive KL term, FSVI implicitly matches the priors over equivalence classes in the limit of infinite data, as shown in the previous section.
+
+This has advantages as overparameterized models are often simpler to optimize. The empirical evidence for this is the success of deep learning models, which are overparameterized and trained with stochastic gradient descent. 
+
+This highlights the elegance and conceptual clarity of FSVI:
+
+<aside class="l-body box-important" markdown="1">
+FSVI is a principled approach to Bayesian inference that respects the inherent symmetries and equivalences in overparameterized models. It focuses on approximating the meaningful posterior $$\pof{[\w] \given \Dany}$$ while avoiding the complexities of explicitly constructing and working with equivalence classes.
+</aside>
+
+## Parameter Priors vs. Predictive Priors
 
 In Bayesian deep learning, we often use parameter priors that are not meaningful and which also do not take parameter symmetries into account. For example, a unit Gaussian prior over the parameters of a neural network does not induce different predictions for different parameters necessarily. While this prior can be sensible from a parameter compression perspective (e.g. see Hinton and van Camp (1993)<d-cite key="hinton1993keeping"></d-cite>), this does not have to be the only consideration guiding us.
 
