Update abstract, introduction and conclusion

--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -2,7 +2,7 @@
 layout: distill
 title: "Bridging the Data Processing Inequality and Function-Space Variational Inference"
 description: >-
-  This blog post explores the interplay between the <i>Data Processing Inequality (DPI)</i>, a cornerstone concept in information theory, and <i>Function-Space Variational Inference (FSVI)</i> within the context of Bayesian deep learning. The DPI governs the transformation and flow of information through stochastic processes, and its unique connection to FSVI is employed to highlight FSVI's focus on Bayesian predictive posteriors over parameter space. Throughout the post, theoretical concepts are intertwined with intuitive explanations and mathematical rigor, offering a comprehensive understanding of these complex topics. The post concludes by bringing together various ideas to explain why the choice of predictive priors (initial probability distributions assumed for model predictions before training) is important for training machine learning models and preventing overfitting. It also discusses the practical implications of these concepts in areas such as continual learning and knowledge distillation. By examining these concepts in depth, the post provides valuable insights for both theory and practice in machine learning, making it an informative resource for researchers and practitioners.
+  This blog post explores the interplay between the <i>Data Processing Inequality (DPI)</i>, a cornerstone concept in information theory, and <i>Function-Space Variational Inference (FSVI)</i> within the context of Bayesian deep learning. The DPI governs the transformation and flow of information through stochastic processes, and its unique connection to FSVI is employed to highlight FSVI's focus on Bayesian predictive posteriors over parameter space. The post examines various forms of the DPI, including the KL divergence based DPI, and provides intuitive examples and detailed proofs. It also explores the equality case of the DPI to gain a deeper understanding. The connection between DPI and FSVI is then established, showing how FSVI can measure a predictive divergence independent of parameter symmetries. The post relates FSVI to knowledge distillation and label entropy regularization, highlighting the practical relevance of the theoretical concepts. Throughout the post, theoretical concepts are intertwined with intuitive explanations and mathematical rigor, offering a comprehensive understanding of these complex topics. By examining these concepts in depth, the post provides valuable insights for both theory and practice in machine learning.
 date: 2024-05-07
 future: true
 htmlwidgets: true
@@ -54,6 +54,7 @@ toc:
       - name: "Consistency"
       - name: "Equality & Symmetries"
       - name: "Predictive Prior"
+      - name: "The FSVI Objective"
   - name: "Parameter Priors vs. Predictive Priors"
     subsections:
       - name: "Label Entropy Regularization"
@@ -245,10 +246,11 @@ The data processing inequality examines how information cannot increase due to p
 
 Concretely, this KL DPI states that processing data stochastically can only reduce information. More formally:
 
-<aside class="l-body box-note" markdown="1">
+<aside class="l-body box-important" markdown="1">
 Consider two distributions $$\qof{\W}$$ and $$\pof{\W}$$ over a random variable $$\W$$. Let $$Y = \fof{\W}$$ be a stochastic mapping from $$\W$$ to $$Y$$---that is, we could imagine having a noise random variable $$\boldsymbol{Z}$$ as a hidden input to $$\fof{\W}$$, i.e. $$\fof{\W;\boldsymbol{Z}}$$. Then the DPI states:
 
 $$\Kale{\qof{\W}}{\pof{\W}} \ge \Kale{\qof{Y}}{\pof{Y}}.$$
+
 </aside>
 
 That is, the KL divergence between $$\qof{Y}$$ and $$\pof{Y}$$ cannot be larger than the one between the original $$\qof{\W}$$ and $$\pof{\W}$$. Intuitively, the stochastic mapping $$\opf$$ induces a bottleneck that reduces how well we can distinguish between $$\opp$$ and $$\opq$$. Finally we have equality when $$\Kale{\qof{\W \given Y}}{\pof{\W \given Y}} = 0$$.
@@ -266,17 +268,25 @@ Generally, *variational inference* is a powerful technique for approximating com
 However, especially for deep neural networks, obtaining a good approximation of the parameter space can be difficult. One reason is the sheer size of the parameter space. Additionally, the parameterization of a neural network often contains many symmetries---different parameter configurations can lead to the same predictions of the model---that are not taken into account either. 
 
 Here, **Function-space variational inference (FSVI)** side-steps some of these restrictions by only requiring that the variational distribution matches the *Bayesian **predictive** posterior*:
-Whereas regular variational inference regularizes towards a parameter prior, FSVI regularizes towards a data prior. This is especially useful when the parameter prior is not very meaningful, e.g. an isotropic Gaussian prior, which is often used in Bayesian neural networks.
 
-<aside class="l-body box-note" markdown="1">
-In function-space variational inference, we regularize towards a data prior:
+If we define equivalence classes of model parameters according to the model predictions, FSVI aims to approximate the posterior distribution over *equivalence classes* of parameters $$\pof{[\w] \given \Dany}$$ rather than the posterior over raw parameters $$\pof{\w \given \Dany}$$. This is because $$\pof{[\w] \given \Dany}$$ captures the meaningful aspects of the posterior, as it is invariant to the symmetries and equivalences in the parameter space that leave the likelihood unchanged.
+
+To achieve this, FSVI employs an implicit variational distribution $$\qof{[\w]}$$ and minimizes an objective that is equivalent to regular variational inference on the equivalence classes $$\Kale{\qof{[\W]}}{\pof{[\W] \given \Dany}}$$. 
+
+By using an implicit variational distribution and leveraging the DPI, FSVI sidesteps the need to explicitly define the equivalence classes or specify a model that operates on them directly. Instead, FSVI relies on the fact that matching the predictive prior distributions in the limit of infinite data is sufficient to match the posteriors over equivalence classes overall. This leads to approximations we can connect to label entropy regularization and knowledge distillation.
+
+<aside class="l-body box-important" markdown="1">
+Function-space variational inference (FSVI) is a principled approach to Bayesian inference that respects the inherent symmetries and equivalences in overparameterized models. It focuses on approximating the meaningful posterior $$\pof{[\w] \given \Dany}$$ while avoiding the complexities of explicitly constructing and working with equivalence classes.
+The FSVI-ELBO regularizes towards a data prior:
 
 $$
 \begin{aligned}
 \E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}},
 \end{aligned}
 $$
-unlike in regular variational inference, where we regularize towards a parameter prior: $$\Kale{\qof{\W}}{\pof{\W}}$$.
+
+unlike in regular variational inference, where we regularize towards a parameter prior $$\Kale{\qof{\W}}{\pof{\W}}$$.
+
 </aside>
 
 ## Background: Information-Theoretic Notation
@@ -1078,14 +1088,15 @@ The same holds for $$\opq$$.
 <aside class="l-body box-important" markdown="1">
 This commutative property is not unique to the equivalence class mapping but rather a general characteristic of applying functions to random variables. The mapping $$[\cdot]$$ transforms the random variable $$\W$$ into a new random variable $$[\W]$$, and remarkably, this transformation commutes with Bayesian inference.
 
-The proof above holds for any function $$\fof{\cdot}$$ applied to a random variable. We have the freedom to either draw a parameter sample from the posterior and then apply the function to it, or alternatively, perform Bayesian inference directly on the transformed random variable.
+The proof above holds for any function $$\fof{\cdot}$$ applied to a random variable. We are free to either draw a parameter sample from the posterior and then apply the function to it, or alternatively, perform Bayesian inference directly on the transformed random variable.
 
 Consequently, we have:
 
 $$[\W \given \Dany] = [\W] \given \Dany.$$
 
-These simple results deserve careful appreciation to fully internalize them.
 </aside>
+
+These simple results deserve careful appreciation to fully internalize them.
 
 ### Equality & Symmetries
 
@@ -1207,7 +1218,7 @@ In my opinion, this is a great result. We have shown both that the predictive pr
 
 Let's appreciate one more thing: the predictive prior can consist of infinitely many data points and still converge to a finite value. 
 
-### The True FSVI Objective
+### The FSVI Objective
 
 The true objective of FSVI is to perform variational inference in the space of equivalence classes, approximating the posterior $$\pof{[\w] \given \Dany}$$ that captures the meaningful aspects of the model while being invariant to parameter symmetries. This perspective reveals FSVI as a powerful and principled framework for Bayesian inference in overparameterized models, providing both conceptual and practical advantages over standard variational inference in parameter space.
 
@@ -1287,9 +1298,11 @@ The main technical difference is that knowledge distillation is using the revers
 
 ## Conclusion
 
-In this blog post, we took a deep dive into the data processing inequality (DPI) and its surprisingly far-reaching implications for modern Bayesian deep learning. By carefully examining the assumptions, equality conditions, and chain rule of the DPI, we arrived at an intuitive understanding of why function-space variational inference (FSVI) can be such a powerful tool. The DPI perspective illuminates how FSVI side-steps issues with high-dimensional parameter spaces by focusing on matching Bayesian predictive posteriors.
+In this blog post, we took a deep dive into the data processing inequality (DPI) and its surprisingly far-reaching implications for modern Bayesian deep learning. By carefully examining the assumptions, equality conditions, and chain rule of the DPI, we arrived at an intuitive understanding of why function-space variational inference (FSVI) can be such a powerful tool. The DPI perspective shows how FSVI side-steps issues with high-dimensional parameter spaces by focusing on matching Bayesian predictive posteriors.
 
 Reasoning about parameter equivalence classes under the lens of the DPI, we saw how predictive KL divergences can capture meaningful differences between models while ignoring superficial discrepancies due to symmetries. This provides a fresh perspective on the advantages of predictive priors over standard parameter priors commonly used in Bayesian neural networks.
+
+A key insight that emerged is that FSVI's true objective is to perform variational inference in the space of predictive equivalence classes, approximating the posterior $$\pof{[\w] \given \Dany}$$ that captures the meaningful aspects of the model while being invariant to parameter symmetries. By employing an implicit variational distribution and leveraging the DPI, FSVI sidesteps the need to explicitly define equivalence classes, relying instead on the fact that matching predictive distributions is sufficient to match the posteriors over equivalence classes in the infinite data limit. This reveals FSVI as a principled and elegant approach to Bayesian inference in overparameterized models.
 
 While our treatment only scratched the surface of the full mathematical story, the intuitions we developed allowed us to re-derive key results from the literature and uncover deep connections between seemingly disparate methods like entropy regularization, continual learning, and knowledge distillation. The examples and proofs peppered throughout solidified the core concepts.
 
@@ -1297,5 +1310,5 @@ More than a bag of technical tricks, the DPI reveals itself to be a powerful con
 
 ---
 
-**Acknowledgements.** Many thanks to [Freddie Bickford Smith](https://fbickfordsmith.com/) for very helpful comments and feedback on this post and to [Tim Rudner](https://timrudner.com/) for additional pointers to relevant literature and feedback on the FSVI section in particular 🤗
+**Acknowledgements.** Many thanks to [Freddie Bickford Smith](https://fbickfordsmith.com/) for very helpful comments and feedback on this post and to [Tim Rudner](https://timrudner.com/) for additional pointers to relevant literature and feedback on the FSVI section in particular 🤗 GPT-4 and Claude 3 Opus were used for editing.
 
